working on pageQuiz

--- a/style/pages/quizpage.scss
+++ b/style/pages/quizpage.scss
@@ -19,7 +19,7 @@
 
 .bannerKaamelott{background-image: url("../Ressources/Photos/QuizKaamelott.jpg");}
 .bannerAlien{background-image: url("../Ressources/Photos/QuizAlien.jpg");}
-.bannerG.O.T{background-image: url("../Ressources/Photos/QuizG.O.T.jpg");}
+.bannerGOT{background-image: url("../Ressources/Photos/QuizGOT.jpg");}
 
 
 ///border logo
