--- a/style/layout/_layout.scss
+++ b/style/layout/_layout.scss
@@ -77,7 +77,7 @@ header{
   height: 100%;
   width: 100%;
   overflow: auto;
-  background-color: blue;//$around-modal-bg-color;
+  background-color: $around-modal-bg-color;
     .content2{
       margin: 5% auto;
       width: 100%;
@@ -108,6 +108,8 @@ header{
         p{
           margin: 50px 0px 50px 0px;
           @include self-text-align;
+          color: $tertiary-color;
+          font-size: auto;
         }  
       }
       @include mobile-style{max-width: 480px;}
@@ -147,3 +149,22 @@ footer{
     @include truemobile-style{font-size: 160%;}
     }
 } 
+
+/*///MODAL ANIMATION/////*/
+
+@-webkit-keyframes modalopen {
+  from {
+    opacity: 0;
+    -webkit-transform: translateY(-150px);
+    transform: translateY(-150px);
+  }
+  to {opacity: 1;}
+}
+@keyframes modalopen {
+  from {
+    opacity: 0;
+    -webkit-transform: translateY(-150px);
+    transform: translateY(-150px);
+  }
+  to {opacity: 1;}
+}
