--- a/style/utils/_variablesAndMixins.scss
+++ b/style/utils/_variablesAndMixins.scss
@@ -6,7 +6,8 @@
 $primary-color:#ffcc00; //
 $secondary-color:#F19E1A; // 
 $tertiary-color:#1B3E4A; // 
-$fourth-color: #2C6B80; 
+$fourth-color: #2C6B80;
+$around-modal-bg-color:rgba(250, 250, 250, 0.4);
 
 /*///BREAKPOINTS*/
 $break-tablet:1199px;
