--- a/style/components/_components.scss
+++ b/style/components/_components.scss
@@ -31,3 +31,44 @@
 			//padding: 15px;//instead of nothing	
 		}
 }
+
+/*///MODAL CLOSE BUTTON/////*/
+
+.close {
+  position: absolute;
+  right: 5px;
+  top: 15px;
+  width: 60px;
+  height: 60px;
+  opacity: 1;
+  cursor: pointer;
+  padding: 3px;
+  -webkit-transform: scale(0.7);
+  -ms-transform: scale(0.7);
+  transform: scale(0.7);
+  &:before, &:after {
+    position: absolute;
+    left: 30px;
+    content: " ";
+    height: 60px;
+    width: 7px;
+    background-color: $primary-color;
+  }
+  &:before {
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
+  }
+  &:after {
+   -webkit-transform: rotate(-45deg);
+   -ms-transform: rotate(-45deg);
+   transform: rotate(-45deg);
+  }
+  @include mobile-style{
+    right: 15px;
+     &:before, &:after {
+      height: 40px;
+      width: 5px;
+     }
+  }
+}
