--- a/style/pages/quizpage.scss
+++ b/style/pages/quizpage.scss
@@ -189,27 +189,23 @@ main{
 /*///ANSWERS DISPLAYING /////*/
 
 .all-in-one{  
-  @include just-flex;
+  @include flex-column;
   @include justify-content-center;
-  p{ font-size : 120%;}
+  p{ 
+    font-size : 120%;
+  }
   .h2-quiz{
-      @include just-flex;
-      flex : 3;
-      text-align: end;
-      /*color: $fourth-color;*/
+      //@include just-flex;
+      flex : 1;
       color: white;
       margin: 0;
-      //@include self-text-align;
   }
   .h3-quiz{
     margin: 0;
-    margin-left: 10px;
-    //@include self-text-align;
-    align-self: flex-end;
-    text-align: start;
-      @include just-flex;
-      flex : 1;
+    //@include just-flex;
+    flex : 1;
   }
+  /*
   @include mobile-style{p{ font-size : 120%;}}
   @include tablet-style{
     @include flex-column;
@@ -221,6 +217,7 @@ main{
   }
 
 }
+*/
 }
 
  
