--- a/style/pages/quizpage.scss
+++ b/style/pages/quizpage.scss
@@ -7,21 +7,22 @@
   height: 250px; 
   border-radius: 20px;
   background-position: 50% 34% ;   
-  h1{
-    margin-top: 170px;
-    font-size: 130%;
-    padding: 17px;
-    @include self-text-align;
-    background-color: rgba(255, 255, 255, 0.7);
-    border-radius: 20px;
-    color: $tertiary-color;
-  }
+    h1{
+      margin-top: 170px;
+      font-size: 130%;
+      padding: 17px;
+      @include self-text-align;
+      background-color: rgba(255, 255, 255, 0.7);
+      border-radius: 20px;
+      color: $tertiary-color;
+    }
   @include truemobile-style{
     border-radius: 0px;
     width: 100vw;
   }
 }
 
+/*///Set up real urls for dynamic banners///////////////////////////////////////////////////////*/
 .bannerKaamelott{
   background-image: url("../Ressources/Photos/QuizKaamelott.jpg");
 }
@@ -33,186 +34,168 @@
   background-position: 50% 17% ;   
 }
 
+/*////////////////////////////////////////////////////////////////////////////////////////////////*/
 
-/*/border logo*/
-header{
-  #logo{
-    border-bottom: 0px;/* solid $tertiary-color;*/
-  }
-}
 
+/*//////border logo/////*/
+header{#logo{border-bottom: 0px;}}
+
+/*//////MAIN SECTION/////*/
 main{
-  /*width: 100vw;*/
-  /*height: 50vh;*/
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   text-align: center;
   display: -ms-grid;
   display: grid;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   justify-items: center;
   color: $primary-color;
-  /*
-
-  @include just-flex;
-  width: 100%;
-  padding: 25px;
-  @include flex-wrap;
-  margin: auto;
-  @include justify-content-center;
-  overflow-x: hidden;
-  @include mobile-style{
-    width: 100%;
-    padding: 25px 0px 25px 0px;
-  }
-  */
   @include mobile-style{
     @include flex-column;
     -ms-flex-wrap: nowrap;
-        flex-wrap: nowrap;
-    /*width: 100%;*/
+    flex-wrap: nowrap;
   }
-  h3{
-    color: $primary-color;
-    font-size: 1.5rem;
-  }  
-  .container{
-    .choices{
-      display: -webkit-box;
-      display: -ms-flexbox;
-      display: flex;
-      -ms-flex-wrap: wrap;
-          flex-wrap: wrap;
-      margin: 3rem auto 3rem;
-      width: 500px;
-    }
-    @include mobile-style{
-      h2{
-        width: 80%;
-        -ms-flex-item-align: center;
-            -ms-grid-row-align: center;
-            align-self: center;
-        @include self-text-align;
-        margin: auto;
-        -ms-flex-wrap: nowrap;
-            flex-wrap: nowrap;
-      }
-      .choices{
-         width: 80%;
-        -ms-flex-item-align: center;
-            -ms-grid-row-align: center;
-            align-self: center;
-        @include self-text-align;
-        margin: auto;
-      }
-    }
-  }
-  #progress {
-    font-size: 1.3rem;
-    color: $primary-color;
-  }
-  button {
-    color: $tertiary-color;
-    background: $primary-color;
-    border: 1px solid $primary-color;
-    -webkit-box-flex: 1;
-        -ms-flex: 1 0 45%;
-            flex: 1 0 45%;
-    width: 200px;
-    min-height: 80px;
-    height: auto;
-    border-radius: 5px;
-    cursor: pointer;
-    border: none;
-    margin: .4rem;
-    outline: none;
-    -webkit-user-select: none;
-       -moz-user-select: none;
-        -ms-user-select: none;
-            user-select: none;
-    font-weight: 600;
-    &:hover{
+    h3{
       color: $primary-color;
-      background: $fourth-color;
-      border: 1px solid $fourth-color;
-      -webkit-transition: .4s;
-      -o-transition: .4s;
-      transition: .4s;
-      @include truemobile-style{
-      background: $primary-color;
-      color: $tertiary-color;
-      }   
+      font-size: 1.5rem;
+    }  
+    .container{
+      .choices{
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+        margin: 3rem auto 3rem;
+        width: 500px;
+      }
+     @include mobile-style{
+        h2{
+          width: 80%;
+          -ms-flex-item-align: center;
+          -ms-grid-row-align: center;
+          align-self: center;
+          @include self-text-align;
+          margin: auto;
+          -ms-flex-wrap: nowrap;
+          flex-wrap: nowrap;
+        }
+        .choices{
+          width: 80%;
+          -ms-flex-item-align: center;
+          -ms-grid-row-align: center;
+          align-self: center;
+          @include self-text-align;
+          margin: auto;
+        }
+      }
     }
-    &:active{
-      -webkit-transform: scale(1.05);
-          -ms-transform: scale(1.05);
-              transform: scale(1.05);
-      -webkit-transition: -webkit-transform .1s;
-      transition: -webkit-transform .1s;
-      -o-transition: transform .1s;
-      transition: transform .1s;
-      transition: transform .1s, -webkit-transform .1s;
-      @include truemobile-style{
-      -webkit-transform: none;
-          -ms-transform: none;
-              transform: none;
-      }   
-    }
-    p{
+    #progress {
       font-size: 1.3rem;
-      margin: 0;
+      color: $primary-color;
     }
-  }
-  .retryOrLeave { margin-top: 25px;} 
-  .retryOrLeave button{
-    @include justify-content-center;
-    height: 40px;
-    max-height: 40px;
-    min-height: 40px;
-    color: $primary-color;
-    background: $fourth-color;
-    border: 1px solid $fourth-color;
-     &:hover{
-      border: 1px solid $tertiary-color;
-      background: $primary-color;
+    button {
       color: $tertiary-color;
-      -webkit-transition: .4s;
-      -o-transition: .4s;
-      transition: .4s;
-      @include truemobile-style{
-        background: $tertiary-color;
+      background: $primary-color;
+      border: 1px solid $primary-color;
+      -webkit-box-flex: 1;
+      -ms-flex: 1 0 45%;
+      flex: 1 0 45%;
+      width: 200px;
+      min-height: 80px;
+      height: auto;
+      border-radius: 5px;
+      cursor: pointer;
+      border: none;
+      margin: .4rem;
+      outline: none;
+      -webkit-user-select: none;
+      -moz-user-select: none;
+      -ms-user-select: none;
+      user-select: none;
+      font-weight: 600;
+      &:hover{
         color: $primary-color;
-      }  
+        background: $fourth-color;
+        border: 1px solid $fourth-color;
+        -webkit-transition: .4s;
+        -o-transition: .4s;
+        transition: .4s;
+        @include truemobile-style{
+          background: $primary-color;
+          color: $tertiary-color;
+        }
+      }
+      &:active{
+        -webkit-transform: scale(1.05);
+        -ms-transform: scale(1.05);
+        transform: scale(1.05);
+        -webkit-transition: -webkit-transform .1s;
+        transition: -webkit-transform .1s;
+        -o-transition: transform .1s;
+        transition: transform .1s;
+        transition: transform .1s, -webkit-transform .1s;
+        @include truemobile-style{
+          -webkit-transform: none;
+          -ms-transform: none;
+          transform: none;
+        }
+      }
+      p{
+        font-size: 1.3rem;
+        margin: 0;
+      }
     }
-    p{font-size: 0.9rem;}
+    .retryOrLeave {
+      margin-top: 25px;
+        button{
+          @include justify-content-center;
+          height: 40px;
+          max-height: 40px;
+          min-height: 40px;
+          color: $primary-color;
+          background: $fourth-color;
+          border: 1px solid $fourth-color;
+          &:hover{
+            border: 1px solid $tertiary-color;
+            background: $primary-color;
+            color: $tertiary-color;
+            -webkit-transition: .4s;
+            -o-transition: .4s;
+            transition: .4s;
+            @include truemobile-style{
+              background: $tertiary-color;
+              color: $primary-color;
+            }  
+          }
+          p{font-size: 0.9rem;}
+        }
+    }
   }
-}
 
 /*///ANSWERS DISPLAYING /////*/
 
-.all-in-one{  
+.all-in-one{
   @include flex-column;
   @include justify-content-center;
-  p{ 
-    font-size : 120%;
-  }
-  .h2-quiz{
-      //@include just-flex;
+    p{font-size : 120%;}
+    .h2-quiz{
+      -webkit-box-flex : 1;
+      -ms-flex : 1;
       flex : 1;
       color: white;
       margin: 0;
+    }
+    .h3-quiz{
+      margin: 0;
+      -webkit-box-flex : 1;
+      -ms-flex : 1;
+      flex : 1;
+    }
+    @include mobile-style{padding: 0px 30px 0px 30px;}
   }
-  .h3-quiz{
-    margin: 0;
-    //@include just-flex;
-    flex : 1;
-  }  
-  @include mobile-style{
-  padding: 0px 30px 0px 30px;
-  }
-}
 
  
 
