--- a/style/pages/quizpage.scss
+++ b/style/pages/quizpage.scss
@@ -33,6 +33,10 @@
   background-image: url("../Ressources/Photos/QuizGOT.jpg");
   background-position: 50% 17% ;   
 }
+.bannerFight_Club{
+  background-image: url("../Ressources/Photos/QuizFight_Club.jpg");
+  background-position: 50% 55% ;  
+}
 
 /*////////////////////////////////////////////////////////////////////////////////////////////////*/
 
