--- a/style/pages/quizpage.scss
+++ b/style/pages/quizpage.scss
@@ -35,7 +35,11 @@
 }
 .bannerFight_Club{
   background-image: url("../Ressources/Photos/QuizFight_Club.jpg");
-  background-position: 50% 55% ;  
+  background-position: 50% 60% ;  
+}
+.bannerDisney{
+  background-image: url("../Ressources/Photos/QuizDisney.jpg");
+  background-position: 50% 60% ; 
 }
 
 /*////////////////////////////////////////////////////////////////////////////////////////////////*/
