--- a/style/components/_components.scss
+++ b/style/components/_components.scss
@@ -1,7 +1,7 @@
 
 /*///TAGS/////*/
 .films, .series, .jeux-video, .bd,
-.animes, .a80, .a90, .a00, .allTags, .livres{
+.animes, .allTags, .livres{
   font-weight: bold;  
   margin: 5px;
   padding: 5px 10px 5px 10px;
