--- a/style/pages/_home.scss
+++ b/style/pages/_home.scss
@@ -129,7 +129,7 @@
 	  					opacity : 1;	    	
 	  					width: 100%;
 	  					margin: auto;
-	  					//height: 360px;
+	  					height: 360px;
 	    					.line-content{
 	    						width: 100%;
 	    						padding-top: 70px;
