--- a/style/pages/quizpage.scss
+++ b/style/pages/quizpage.scss
@@ -6,7 +6,8 @@
   min-width: 225px;   
   height: 250px; 
   border-radius: 20px;
-  background-position: 50% 34% ;   
+  background-size: 100%;
+  background-repeat : no-repeat;
     h1{
       margin-top: 170px;
       font-size: 130%;
@@ -23,13 +24,11 @@
 }
 
 /////Restyling images/////
-
-.bannerAlien{background-position: 50% 17% ;}
-.bannerGame_Of_Thrones{background-position: 50% 17% ;}
-.bannerFight_Club{background-position: 50% 60%;}
-.bannerDisney{
-  background-position: 50% 60% ; 
-}
+.bannerKaamelott{background-position: 50% 35%;}
+.bannerAlien{background-position: 50% 50%;}
+.bannerGame_Of_Thrones{background-position: 50% 10%;}
+.bannerFight_Club{background-position: 50% 60%;h1{background-color: rgba(255, 255, 255, 0.85);}}
+.bannerDisney{background-position: 50% 40%;}
 
 
 /*//////border logo/////*/
