--- a/style/pages/quizpage.scss
+++ b/style/pages/quizpage.scss
@@ -29,6 +29,8 @@
 .bannerGame_Of_Thrones{background-position: 50% 10%;}
 .bannerFight_Club{background-position: 50% 60%;h1{background-color: rgba(255, 255, 255, 0.85);}}
 .bannerDisney{background-position: 50% 40%;}
+.bannerAHS{background-position: 50% 80%;}
+.bannerFallout{background-position: 50% 30%;}
 
 
 /*//////border logo/////*/
