Work in progress

--- a/style/pages/quizpage.scss
+++ b/style/pages/quizpage.scss
@@ -30,7 +30,7 @@
 .bannerFight_Club{background-position: 50% 60%;h1{background-color: rgba(255, 255, 255, 0.85);}}
 .bannerDisney{background-position: 50% 40%;}
 .bannerAHS{background-position: 50% 20%;}
-.bannerFallout{background-position: 50% 30%;}
+.bannerFallout{background-position: 50% 30%;h1{background-color: rgba(255, 255, 255, 0.85);}}
 
 
 /*//////border logo/////*/
