--- a/style/pages/quizpage.scss
+++ b/style/pages/quizpage.scss
@@ -31,7 +31,8 @@
 .bannerDisney{background-position: 50% 40%;}
 .bannerAHS{background-position: 50% 20%;}
 .bannerFallout{background-position: 50% 30%;h1{background-color: rgba(255, 255, 255, 0.85);}}
-.bannerThe_Walking_Dead{background-position: 50% 25%;h1{background-color: rgba(255, 255, 255, 1);}}
+.bannerThe_Walking_Dead{background-position: 50% 25%;h1{background-color: rgba(255, 255, 255, 0.9);}}
+.bannerMatrix h1{background-color: rgba(255, 255, 255, 0.85);}
 
 
 /*//////border logo/////*/
