--- a/style/pages/quizpage.scss
+++ b/style/pages/quizpage.scss
@@ -33,6 +33,7 @@
 .bannerFallout{background-position: 50% 30%;h1{background-color: rgba(255, 255, 255, 0.85);}}
 .bannerThe_Walking_Dead{background-position: 50% 25%;h1{background-color: rgba(255, 255, 255, 0.9);}}
 .bannerMatrix h1{background-color: rgba(255, 255, 255, 0.85);}
+.bannerDune{background-position: 50% 50%;}
 
 
 /*//////border logo/////*/
