--- a/style/pages/_home.scss
+++ b/style/pages/_home.scss
@@ -142,7 +142,25 @@
 	    			}
 				}
 		}
-}     	  
+} 
+
+/////Special infos/////
+.spe{
+	font-family: Roboto, arial;
+  -webkit-box-direction: normal;
+  color: green;
+  background-color: #99E2D0;
+  border-radius: 2px;
+  width: 75px;
+  height: 20px;
+  padding: 5px;
+  margin: 16px 11px 0px 0px;
+  text-align: center;
+  font-size: 95%;
+  font-weight: bold;
+  box-shadow: 0px 2px 10px grey;
+ }
+
 
 
 /*///ANIMATION QuizCard/////*/
