--- a/style/pages/_home.scss
+++ b/style/pages/_home.scss
@@ -146,19 +146,20 @@
 
 /////Special infos/////
 .spe{
-	font-family: Roboto, arial;
-  -webkit-box-direction: normal;
-  color: green;
-  background-color: #99E2D0;
-  border-radius: 2px;
-  width: 75px;
-  height: 20px;
-  padding: 5px;
-  margin: 16px 11px 0px 0px;
+	-webkit-box-direction: normal;
+  color: $tertiary-color;
+  background-color: $primary-color;
+  //border: 3px solid $primary-color;
+  border-radius: 0px 25px 0px 25px;
+  padding: 10px;
   text-align: center;
-  font-size: 95%;
-  font-weight: bold;
-  box-shadow: 0px 2px 10px grey;
+  font-weight: 1000;
+  box-shadow: 2px 2px 10px black;
+   position: absolute;
+   right: 0%;
+   top: 0%;
+   z-index: 3;
+   pointer-events: none;
  }
 
 
@@ -166,7 +167,7 @@
 /*///ANIMATION QuizCard/////*/
 
 .main-QuizCard:hover .line-container {
-  opacity: 1;
+	opacity: 1;
   -webkit-animation: bounceIn 0.6s linear;
   animation: bounceIn 0.6s linear;
   @include truemobile-style{
